--- a/index.css
+++ b/index.css
@@ -100,7 +100,7 @@ body {
     transition:.2s;
 }
 .b:hover {
-    background-color:darksalmon;
+    background-color:azure;
     transform:scale(1.1);
 }
 .mid {
@@ -122,7 +122,6 @@ h2 {
 }
 
 p {
-    border:1px solid black;
     text-align:center;
     justify-content: center;
     align-content:center; 
@@ -136,11 +135,11 @@ p {
 .multiplechoice {
     width:150vh;
     display:flex;
-    border:1px solid black;
     margin-top: 4%;
     justify-content: space-evenly;
     align-content: space-evenly;
     height:60vh;
+    flex-wrap:wrap;
 }    
 
 .image {
@@ -148,8 +147,30 @@ p {
     height:200px;
     width:200px;
     justify-content:space-evenly;
-    align-content: space-evenly;
+    align-content: center;
     display:flex;
     box-sizing:border-box;
-    margin:30px;
+    margin-left:90px;
+    margin-right:90px;
+    flex-wrap:wrap;
+    border-radius:100px;
+    
+}
+
+.text {
+    text-shadow:2px 2px white;
+    text-decoration:none;
+    font-size: 30px;
+    color:white;
+    font-family:arial;
+}
+.foot {
+    width: 100%;
+    justify-content: center;
+    align-content: center;
+    height: 90px;
+    background-color: peachpuff;
+    padding-top:40px;
+    padding-bottom: 40px;
+    display:flex;
 }
